--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,6 @@ a:active {
     text-align: right;
 }
 
-
 /*-- Slick Slider --*/
 
 .slick-arrow {
@@ -416,7 +415,6 @@ a:active {
 
 /*-- /Slick Slider --*/
 
-
 .slider-pagination {
     position: relative;
     z-index: 3;
@@ -473,10 +471,6 @@ a:active {
 
 .count-slides-block p:last-child:after {
     display: none;
-}
-
-.slide-arrows-block {
-
 }
 
 .append-arrows {
@@ -737,10 +731,6 @@ a:active {
 /* ----- HEADER ------ */
 /*-------------------------------------------*/
 
-header {
-
-}
-
 .header-site {
     display: block;
     width: 100%;
@@ -758,10 +748,6 @@ header {
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .05);
 }
 
-.header-site .col {
-
-}
-
 .header-site .col-1 {
     display: none;
     width: 32%;
@@ -772,15 +758,10 @@ header {
     width: 68%;
 }
 
-.header-site.inner_page .col-2 {
-    /*padding-top: 4px;*/
-}
-
 .logo-link {
     display: block;
     max-width: 195px;
     width: 98%;
-    /*height: 50px;*/
 }
 
 .logo-link img {
@@ -887,6 +868,8 @@ header {
 
 .header-site.inner_page .col-1 {
     display: block;
+    position: relative;
+    z-index: 2;
 }
 
 .header-site.inner_page .main-nav li a {
@@ -914,7 +897,6 @@ header {
 .header-site.inner_page .col-1 {
     display: block;
 }
-
 
 /* ----- Responsive Menu Button ------ */
 
@@ -1095,22 +1077,11 @@ header {
 .back-block {
     min-width: 100%;
     min-height: 100%;
+    overflow: hidden;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 1;
-}
-
-.promo-slider-block {
-
-}
-
-.promo-slider {
-
-}
-
-.promo-slider .slide {
-
 }
 
 .promo-slider .slide h1 {
@@ -1124,14 +1095,6 @@ header {
     font-weight: normal;
     color: #ffffff;
     padding: 10px 0;
-}
-
-.promo-slider .two-cols {
-
-}
-
-.promo-slider .two-cols .col {
-
 }
 
 .promo-slider .two-cols .col-1 {
@@ -1265,19 +1228,20 @@ header {
     display: block;
     width: 100%;
     height: 100%;
+    overflow: hidden;
     position: absolute;
     top: 0;
     left: 0;
 }
 
 .promo-backgrounds-slider .slide {
-    /*outline: 1px solid red;*/
+    overflow: hidden;
 }
 
 .promo-backgrounds-slider .slide img {
     display: block;
     min-width: 100%;
-    min-height: 100%;
+    min-height: 100vh;
     position: relative;
     left: 50%;
     -webkit-transform: translate(-50%, 0);
@@ -1294,10 +1258,6 @@ header {
 .articles-slider-block {
     padding: 32px 0 0 0;
     position: relative;
-}
-
-.articles-slider {
-    /*outline: 1px solid red;*/
 }
 
 .articles-slider .slide {
@@ -1666,7 +1626,7 @@ header {
     position: relative;
 }
 
-.two-sliders-slide {
+.two-sliders-slide .slide {
     padding-bottom: 130px;
 }
 
@@ -1729,11 +1689,11 @@ header {
 }
 
 .miniatures-slider-block {
+    width: 58%;
     margin: -130px 0 0 0;
 }
 
 .article-inner-miniatures-slider {
-    width: 58%;
     padding-top: 3px;
 }
 
@@ -1879,6 +1839,10 @@ header {
     right: 0;
 }
 
+.socials-block.inner_page.socials-block-2_1 {
+    right: -82%;
+}
+
 .slide-page .footer.footer-3 {
     padding: 0 0 10px 0;
 }
@@ -1924,14 +1888,6 @@ header {
     font-weight: bold;
     color: #d0d9de;
     text-transform: none;
-}
-
-.left-nav-block-list {
-
-}
-
-.accordeon li {
-    /*cursor: pointer;*/
 }
 
 .left-nav-block-list ul {
@@ -2034,27 +1990,13 @@ header {
 
 .left-nav-block {
     width: 15%;
+    margin: 40px 0 0 0;
 }
 
 .articles-slider-3-block {
     width: 78%;
     min-height: 546px;
-}
-
-.articles-slider-3 {
-
-}
-
-.articles-slider-3 .slide {
-
-}
-
-.slide-two-cols {
-
-}
-
-.slide-two-cols .col {
-
+    margin: 40px 0 0 0;
 }
 
 .slide-two-cols .col-1 {
@@ -2165,10 +2107,6 @@ header {
     background-repeat: no-repeat;
 }
 
-.slide_4_footer {
-
-}
-
 .slide_4_footer .col {
     display: inline-block;
     vertical-align: bottom;
@@ -2276,14 +2214,6 @@ header {
     vertical-align: top;
     width: 33.33%;
     position: relative;
-}
-
-.team-thumbnails .thumbnail.black {
-
-}
-
-.team-thumbnails .thumbnail .inner {
-
 }
 
 .team-thumbnails .thumbnail .thumb-title {
@@ -2474,6 +2404,7 @@ header {
 .input-block input {
     display: block;
     width: 100%;
+    height: 54px;
     border: 1px solid transparent;
     border-bottom: 1px solid #353535;
     background: transparent;
@@ -2571,7 +2502,6 @@ header {
 .contacts-logo-block {
     display: block;
     width: 75%;
-    /*padding: 46px 0 51px 0;*/
     padding: 78px 0 51px 0;
     text-align: center;
 }
@@ -2801,7 +2731,6 @@ header {
     display: block;
     height: 100%;
     position: absolute;
-    /*top: 19%;*/
     top: initial;
     bottom: -20%;
     right: -50px;
@@ -2832,10 +2761,6 @@ header {
     color: #d0d9de;
 }
 
-.articles-slider-2 {
-    
-}
-
 .articles-slider-2 .slide {
     min-height: 621px;
     position: relative;
@@ -2852,10 +2777,6 @@ header {
     left: 0;
 }
 
-.images-block .bottom-images {
-
-}
-
 .images-block  .bottom-images img {
     display: inline-block;
     vertical-align: top;
@@ -2870,10 +2791,6 @@ header {
 .images-block .bottom-images .img-2 {
     position: relative;
     left: 29%;
-}
-
-.articles-slider-2_1 {
-
 }
 
 .articles-slider-2_1 .slide .article {
@@ -2934,20 +2851,8 @@ header {
     padding-top: 0 !important;
 }
 
-.articles-slider-4-about-block {
-
-}
-
-.articles-slider-4-about {
-
-}
-
 .articles-slider-4-about .slide {
     height: 100vh;
-}
-
-.articles-slider-4-about .slide .row {
-
 }
 
 .articles-slider-4-about .slide .left-article {
@@ -3127,10 +3032,6 @@ header {
     z-index: 2;
 }
 
-.range-pagination {
-
-}
-
 .range-pagination .slick-dots {
     display: table !important;
     width: 100%;
@@ -3278,7 +3179,6 @@ header {
     display: block;
     width: 180px;
     cursor: pointer;
-    /*margin: 10px 0;*/
     padding: 9px 0;
 }
 
@@ -3456,10 +3356,6 @@ header {
 
 /*-- Slide 1 We Created Page --*/
 
-.slide-1-we-create {
-    /*position: relative;*/
-}
-
 .we-create-slider-block {
     position: relative;
 }
@@ -3563,10 +3459,6 @@ header {
     width: 75%;
 }
 
-.create-nav-block {
-
-}
-
 .create-nav-list {
     margin: 26px 0 0 0;
 }
@@ -3624,10 +3516,6 @@ header {
     padding-right: 3.6%;
 }
 
-/*.create-nav-list li a.active {
-    border-top: 1px solid #dfdfdf;
-}
-*/
 .create-nav-list li.active > a {
     color: #5d8da5;
     padding-right: 3.6%;
@@ -4201,18 +4089,6 @@ header {
     background-position: center;
 }
 
-.center {
-
-}
-
-/*.center:before {
-    display: inline-block;
-    vertical-align: middle;
-    content: "";
-    width: 1%;
-    min-height: 100vh;
-}*/
-
 .center-block {
     display: inline-block;
     vertical-align: middle;
@@ -4225,8 +4101,6 @@ header {
 
 .h-block-404 {
     display: block;
-    /*height: 100%;*/
-    /*width: 100vh;*/
     position: absolute;
     top: 13%;
     bottom: 0;
@@ -4420,16 +4294,12 @@ h2.h2-404:before {
      color: #5d8da5;
 }
 
-.slide-page .footer.inner_page {
 
-}
-
- 
-.slide-page.active .fade_elem {
-    -webkit-animation: fade_elem 1s ease;
-    -moz-animation:    fade_elem 1s ease;
-    -o-animation:      fade_elem 1s ease;
-    animation:         fade_elem 1s ease;
+.slide-page.current-slide-page .fade_elem {
+    -webkit-animation: fade_elem 1.4s ease;
+    -moz-animation:    fade_elem 1.4s ease;
+    -o-animation:      fade_elem 1.4s ease;
+    animation:         fade_elem 1.4s ease;
 }
 
 @keyframes fade_elem {
@@ -4473,108 +4343,109 @@ h2.h2-404:before {
 }
 
 
-.slide-page.active .fadeLeft_elem {
-    -webkit-animation: fadeLeft_elem 1s ease;
-    -moz-animation:    fadeLeft_elem 1s ease;
-    -o-animation:      fadeLeft_elem 1s ease;
-    animation:         fadeLeft_elem 1s ease;
+.slide-page.current-slide-page .fadeLeft {
+    -webkit-animation: fadeLeft_elem 1.5s ease;
+    -moz-animation:    fadeLeft_elem 1.5s ease;
+    -o-animation:      fadeLeft_elem 1.5s ease;
+    animation:         fadeLeft_elem 1.5s ease;
 }
 
 @keyframes fadeLeft_elem {
     0% {
-        margin-left: -20px;
+        left: -20px;
     }
 
     100% {
-        margin-left: 0;
+        left: 0;
     }
 }
 
 @-webkit-keyframes fadeLeft_elem {
     0% {
-        margin-left: -20px;
+        left: -20px;
     }
 
     100% {
-        margin-left: 0;
+        left: 0;
     }
 }
 
 @-moz-keyframes fadeLeft_elem {
     0% {
-        margin-left: -20px;
+        left: -20px;
     }
 
     100% {
-        margin-left: 0;
+        left: 0;
     }
 }
 
 @-o-keyframes fadeLeft_elem {
     0% {
-        margin-left: -20px;
+        left: -20px;
     }
 
     100% {
-        margin-left: 0;
+        left: 0;
     }
 }
 
 
-/*.slide-page.active .fadeRight_elem {
-    -webkit-animation: fadeRight_elem 1s ease;
-    -moz-animation:    fadeRight_elem 1s ease;
-    -o-animation:      fadeRight_elem 1s ease;
-    animation:         fadeRight_elem 1s ease;
+.slide-page.current-slide-page .fadeRight {
+    position: relative;
+    -webkit-animation: fadeRight_elem 1.5s ease;
+    -moz-animation:    fadeRight_elem 1.5s ease;
+    -o-animation:      fadeRight_elem 1.5s ease;
+    animation:         fadeRight_elem 1.5s ease;
 }
 
 @keyframes fadeRight_elem {
     0% {
-        margin-right: -20px;
+        right: -20px;
     }
 
     100% {
-        margin-right: 0;
+        right: 0;
     }
 }
 
 @-webkit-keyframes fadeRight_elem {
     0% {
-        margin-right: -20px;
+        right: -20px;
     }
 
     100% {
-        margin-right: 0;
+        right: 0;
     }
 }
 
 @-moz-keyframes fadeRight_elem {
     0% {
-        margin-right: -20px;
+        right: -20px;
     }
 
     100% {
-        margin-right: 0;
+        right: 0;
     }
 }
 
 @-o-keyframes fadeRight_elem {
     0% {
-        margin-right: -20px;
+        right: -20px;
     }
 
     100% {
-        margin-right: 0;
+        right: 0;
     }
-}*/
+}
 
 
-/*.slide-page.active .fadeUp_elem {
+.slide-page.current-slide-page .fadeUp {
     position: relative;
-    -webkit-animation: fadeUp_elem 1s ease;
-    -moz-animation:    fadeUp_elem 1s ease;
-    -o-animation:      fadeUp_elem 1s ease;
-    animation:         fadeUp_elem 1s ease;
+    -webkit-animation: fadeUp_elem 3s ease;
+    -moz-animation:    fadeUp_elem 3s ease;
+    -o-animation:      fadeUp_elem 3s ease;
+    animation:         fadeUp_elem 3s ease;
 }
 
 @keyframes fadeUp_elem {
@@ -4615,10 +4486,9 @@ h2.h2-404:before {
     100% {
         bottom: 0;
     }
-}*/
+}
 
-
-/*.slide-page.active .fadeDown_elem {
+.slide-page.current-slide-page .fadeDown {
     position: relative;
     -webkit-animation: fadeDown_elem 1s ease;
     -moz-animation:    fadeDown_elem 1s ease;
@@ -4664,10 +4534,10 @@ h2.h2-404:before {
     100% {
         top: 0;
     }
-}*/
+}
 
-/*
-.slide-page.active .fadeZoom_elem {
+
+.slide-page.current-slide-page .fadeZoom {
     position: relative;
     -webkit-animation: fadeZoom_elem 1s ease;
     -moz-animation:    fadeZoom_elem 1s ease;
@@ -4748,4 +4618,3 @@ h2.h2-404:before {
 }
 
 
-*/
