--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1649,7 +1649,14 @@
 
 	.left-nav-block {
 	    width: 100%;
-	    padding: 10px 0;
+	    height: 100vh;
+	    margin: 0;
+	    padding: 50px 0 25px 0;
+	    position: fixed;
+	    top: 0;
+	    left: -110%;
+	    z-index: 5;
+    	background: rgba(255, 255, 255, .8);
 	}
 
 	.accordeon {
