--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1647,6 +1647,10 @@
 	    top: 0;
 	}
 
+	.show-accordeon {
+	    display: block;
+	}
+
 	.left-nav-block {
 	    width: 100%;
 	    height: 100vh;
@@ -1657,6 +1661,10 @@
 	    left: -110%;
 	    z-index: 5;
     	background: rgba(255, 255, 255, .8);
+	}
+
+	.close-accordeon {
+	    display: block;
 	}
 
 	.accordeon {
